--- a/style.css
+++ b/style.css
@@ -12,27 +12,36 @@
     background-color: white;
     
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 2fr max-content;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 2fr 1fr;
 
     /* box-shadow: 0px 1px 5px black; */
     /* z-index: 2; */
 }
-
+/* 
 .first-row {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 2fr max-content;
+} */
+
+.first-row {
+    grid-row: 1;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 .a1 {
+    grid-column: 1;
     display: grid;
-    grid-template-columns: max-content minmax(200px, 1fr);
+    grid-template-columns: max-content minmax(200px, 1fr) 1fr;
     border: blue dotted 2px;
+    align-items: center;
 }
 
 .search-bar {
-    width: 1fr;
+    width: 500px;
     height: 33px;
     background-color: lightgray;
     grid-row: 1;
@@ -47,15 +56,20 @@
 } */
 
 .a2 {
+    grid-row: 1; 
+    grid-column: 2; 
     display: grid;
-    grid-template-columns: max-content;
+    grid-template-columns: max-content max-content max-content;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
     border: solid black 1px;
 }
-
+/* 
 .a2:nth-child(1) {
     grid-column: 1;
     grid-row: 1;
-}
+} */
 
 .sidebar {
     grid-row: 1 / 3;
