--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+:root {
+    --coolblue-color: #1479d8;
+}
+
 .container {
     min-height: 99vh;
     max-height: 100vh;
     min-width: 99vh;
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 4fr;
     grid-template-columns: 1fr 5fr;
 }
 
@@ -14,16 +18,8 @@
     display: grid;
     grid-template-rows: 1fr 2fr;
     grid-template-columns: 2fr 1fr;
-
-    /* box-shadow: 0px 1px 5px black; */
-    /* z-index: 2; */
+    padding: 10px;
 }
-/* 
-.first-row {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 2fr max-content;
-} */
 
 .first-row {
     grid-row: 1;
@@ -50,11 +46,6 @@
     border-radius: 12px;
 }
 
-/* .looking-glass {
-    
-     
-} */
-
 .a2 {
     grid-row: 1; 
     grid-column: 2; 
@@ -65,19 +56,99 @@
     align-items: center;
     border: solid black 1px;
 }
-/* 
-.a2:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1;
-} */
+
+.second-row {
+    grid-row: 2;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
+}
+
+.b1 {
+    display: grid;
+    grid-template-columns: max-content minmax(200px, 1fr);
+    align-items: center;
+}
+
+.b2 {
+    /* display: grid; */
+    display: flex;
+    /* grid-template-columns: repeat(3, 1fr); */
+    /* justify-self: center; */
+    /* align-self: center; */
+    /* grid-auto-flow: column;
+    align-self: center; */
+    justify-content:space-around;
+    align-items: center;
+}
+
+.btn-header {
+    
+    border: none;
+    padding: 16px;
+    width: 120px;
+    height: 46px;
+    border-radius: 25px;
+    background-color: var(--coolblue-color);
+    color: white;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.btn-header:hover {
+    cursor: pointer;
+    background-color: #0d64b4;
+    /* border: solid var(--coolblue-color) 9 px; */
+    /* padding: 3px; */
+}
 
 .sidebar {
     grid-row: 1 / 3;
     grid-column: 1;
-    background-color: #08cbff;
+    display: grid;
+    grid-template-rows: repeat(3, max-content);
+    background-color: var(--coolblue-color);
+
 }
 
+.sidebar p {
+    color: white;
+    font-size: 21px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#title-sidebar {
+    font-weight: bold;
+    font-size: 24px;
+}
 
 .main-content {
     background-color: #d9eded;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 7fr;
+    padding: 21px;
+}
+
+.mc-left {
+}
+
+.mc-right {
+    
+}
+
+.project-divs {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+}
+
+.projects {
+    /* width: 200px;
+    height: 200px; */
+    background-color: white;
 }
