--- a/style.css
+++ b/style.css
@@ -123,19 +123,106 @@
     grid-row: 1 / 3;
     grid-column: 1;
     display: grid;
-    grid-template-rows: repeat(3, max-content);
+    grid-template-rows: repeat(9, max-content);
+    grid-template-columns: 1fr 3fr;
     background-color: var(--coolblue-color);
+    padding-left: 42px;
+}
+
+.sidebar p,
+.sidebar a {
+    color: white;
+    font-size: 23px;
+    text-decoration-line: none;
+    grid-column: 2;
+    padding-bottom: 25px;
+    font-weight: 600;
+    margin-left: -20px;
+}
+
+.sidebar a:nth-of-type(6) {
+    padding-top: 50px;
+}
+
+.sidebar a:nth-of-type(7) {
+    padding-top: 5px;
 
 }
 
-.sidebar p {
-    color: white;
-    font-size: 21px;
+
+.sidebar a:nth-of-type(7) {
+    padding-top: 5px;
+}
+
+.sidebar img {
+    grid-column: 1;
+}
+
+.sidebar img:nth-of-type(1) {
+    grid-row: 2;
+}
+
+.sidebar img:nth-of-type(2){
+    grid-row: 3;
+}
+
+.sidebar img:nth-of-type(3){
+    grid-row: 4;
+}
+
+.sidebar img:nth-of-type(4){
+    grid-row: 5;
+    
+}
+
+.sidebar img:nth-of-type(5){
+    grid-row: 6;
+    
+}
+
+.sidebar img:nth-of-type(6){
+    grid-row: 7;
+    padding-top: 50px;
+}
+
+.sidebar img:nth-of-type(7){
+    grid-row: 8;
+    padding-top: 5px;
+}
+
+.sidebar img:nth-of-type(8){
+    grid-row: 9;
+    padding-top: 1px;
+}
+
+.sidebar img:nth-of-type(10){
+    grid-row: 10;
+    padding-top: 25px;
+}
+
+.white-svg {
+    filter: invert(100%) sepia(1%) saturate(2%) hue-rotate(94deg) brightness(103%) contrast(100%);
+    /* padding-top: 20px; */
+    /* display: absolute; */
+    margin-bottom: -4px;
 }
 
 #title-sidebar {
+    /* display: inline-block; */
     font-weight: bold;
-    font-size: 24px;
+    font-size: 30px;
+    grid-row: 1;
+    grid-column: 2;
+
+}
+
+.sb-first-row > p{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.sb-second-row > img {
+    grid-column: 1;
 }
 
 .main-content {
@@ -309,10 +396,15 @@ img:hover:not(.magnifying-glass),
     cursor: pointer;
 }
 
-.sidebar p:hover:not(#title-sidebar) {
+.sidebar a:hover:not(#title-sidebar) {
     cursor: pointer;
-    background-color: rgba(255, 218, 185, 0.3);
+    color: #c4f53e;
+    /* background-color: rgba(255, 218, 185, 0.3); */
+}
 
+.sidebar img:hover {
+    
+    filter: invert(99%) sepia(88%) saturate(1249%) hue-rotate(22deg) brightness(102%) contrast(94%);
 }
 
 .projects > .little-title {
